# django-fontawesome-5

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
fontawesome_5/: fields.py
fontawesome_5/static/fontawesome_5/css/: django-fontawesome.css
fontawesome_5/static/fontawesome_5/js/: django-fontawesome.js
fontawesome_5/templates/fontawesome_5/: icon_as_html.html
fontawesome_5/templatetags/: fontawesome_5.py
