[build-system]
requires = ["setuptools>=61.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-fontawesome-5"
description = "A utility for using icons in models, forms, and templates."
keywords = ["Django", "FontAwesome 5"]
version = "1.1.0"
license = {text = "BSD"}
authors = [
    { name = "Benjamin Frost", email = "info@btfrost.com" }
]
maintainers = [
    { name = "François GUÉRIN", email = "frague59@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "Django>=2.1"
]
dynamic = ["readme"]

[tool.setuptools.dynamic]
readme = { file = "README.md", content-type = "text/markdown; charset=UTF-8" }

[project.urls]
Homepage = "https://github.com/frague59/django-fontawesome-5"

[tool.setuptools.exclude-package-data]
"*" = ["node_modules*"]

[tool.setuptools.package-data]
where = ["*"]
"*" = [
    "*.txt",
    "*.md",
    "*.rst",
    "*.json",
    "*.html",
    "*.js",
    "*.css"
]

