[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-fontawesome-5"
description = "A utility for using icons in models, forms, and templates."
dynamic = ["version"]
requires-python = ">=3.8"
license-file = { path = "LICENSE" }
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = 'Benjamin Frost', email = 'info@btfrost.com' },
]
maintainers = [
    { name = "François GUÉRIN", email = "frague59@gmail.com" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.hatch.version]
path = "fontawesome_5/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["fontawesome_5"]
